.sisyphus/evidence/task-4-udp-compiles.txt
install
+- install quotez
   +- compile exe quotez Debug native 1 errors
src/main.zig:78:9: error: expected type '*<T>', found '*@typeInfo(@typeInfo(@TypeOf(selector.Selector.init)).@"fn".return_type.?).error_union.error_set!<T>'
        &sel,
        ^~~~
src/main.zig:78:9: note: <T> = selector.Selector
src/main.zig:78:9: note: pointer type child '@typeInfo(@typeInfo(@TypeOf(selector.Selector.init)).@"fn".return_type.?).error_union.error_set!selector.Selector' cannot cast into pointer type child 'selector.Selector'
src/selector.zig:39:22: note: struct declared here
pub const Selector = struct {
                     ^~~~~~
src/servers/tcp.zig:39:14: note: parameter type declared here
        sel: *selector_mod.Selector,
             ^~~~~~~~~~~~~~~~~~~~~~
referenced by:
    callMain [inlined]: /home/fulgidus/.zvm/master/lib/std/start.zig:714:37
    callMainWithArgs [inlined]: /home/fulgidus/.zvm/master/lib/std/start.zig:674:20
    main: /home/fulgidus/.zvm/master/lib/std/start.zig:689:28
    1 reference(s) hidden; use '-freference-trace=4' to see all references
error: 1 compilation errors
failed command: /home/fulgidus/.zvm/master/zig build-exe -ODebug -Mroot=/home/fulgidus/Documents/quotez/src/main.zig -lc --cache-dir .zig-cache --global-cache-dir /home/fulgidus/.cache/zig --name quotez --zig-lib-dir /home/fulgidus/.zvm/master/lib/ --listen=-

Build Summary: 0/3 steps succeeded (1 failed)
install transitive failure
+- install quotez transitive failure
   +- compile exe quotez Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/a8e4908e6baceafa9a9590eb6ffdd352/build /home/fulgidus/.zvm/master/zig /home/fulgidus/.zvm/master/lib /home/fulgidus/Documents/quotez .zig-cache /home/fulgidus/.cache/zig --seed 0xc86fd286 -Z7b8b83d959e1a01e
